--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<!-- Header -->
 			<header id="header"><h1><a href="index.html">磐炽咨询</a></h1>
 				<nav id="nav"><ul><li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">关于我们</a></li>
-						<li><a href="elements.html">服务案例</a></li>
+						<li><a href="#">关于我们</a></li>
+						<li><a href="#">服务案例</a></li>
 					</ul></nav></header><!-- Banner --><section id="banner"><h2>助您加速市场洞察</h2>
 				<p>宏观经济、行业趋势、客户需求、竞争动态、供方资源</p>
 				<ul class="actions"><li>
