--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								</li>
 								<li>
 									<h3>Mail</h3>
-									<a href="#">gaocc2010@163.com</a>
+									<a href="#">panchiconsulting@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
@@ -79,6 +79,6 @@
 							</ul></section></div>
 				</div>
 			</footer><div class="copyright">
-			Powered by: <a href="https://gaochen2010.github.io/consulting/index.html">磐炽咨询</a>
+			Powered by: <a href="http://pan-chi.info/">磐炽咨询</a>
 		</div>
 	</body></html>
